--- a/_data/sidebars/sparc_sidebar.yml
+++ b/_data/sidebars/sparc_sidebar.yml
@@ -21,6 +21,9 @@ entries:
     - title: Contributing to the Documentation
       url: /doc_contribute.html
       output: web, pdf
+    - title: Getting started with the Documentation
+      url: /contribute_docs_new.html
+      output: web, pdf
     - title: Frequently Asked Questions
       url: /faq.html
       output: web, pdf
