Reworking MAPcore DRC page to start including some supporting documentation.
New MAPCore information page as the landing page for MAP core in the docs and adding the first of several
MBF documentation pages as support documents. Removing the previous webinar page as that information is now
including in the common webinar pages.

--- a/_data/sidebars/sparc_sidebar.yml
+++ b/_data/sidebars/sparc_sidebar.yml
@@ -46,7 +46,7 @@ entries:
       url: /dat_information.html
       output: web, pdf
     - title: MAP-Core Information
-      url: /Webinar_by_PeterHunter.html
+      url: /map_information.html
       output: web, pdf
     - title: Webinars
       url: /webinars.html
